Feat: Dashboard - enable the feature file listing
