# src/http-server/routes.js
@@ -17,6 +17,8 @@ module.exports = express.Router()
   .get('/config', NoConfigForbidden, Controllers.config)
   .post('/reports', Controllers.createReports)
   .get('/reports', Controllers.getReports)
+  .get('/api/project/features', Controllers.getFeatures)
+  .get('/api/project/features/*', Controllers.getFeaturesFile)
   .post('/api/restqa/initialize', Controllers.initialize)
   .get('/api/restqa/steps', NoConfigForbidden, Controllers.steps)
   .post('/api/restqa/generate', Controllers.generate)
